--- a/src/app/feedback-dialog/feedback-dialog.component.html
+++ b/src/app/feedback-dialog/feedback-dialog.component.html
@@ -4,7 +4,7 @@
   <div class="userInfo">
     <div class="fillinRow">
       <label style="font-weight: bold;">員工編號:</label>
-      <input id="employeeId" class="inputCss" [(ngModel)]="form.employeeId" placeholder="例如 E0001">
+      <input id="employeeId" class="inputCss" [(ngModel)]="form.employeeId" placeholder="例如 E0001" disabled="">
     </div>
 
     <div class="fillinRow">
